--- a/style.css
+++ b/style.css
@@ -9,3 +9,39 @@
    section {
       background: (rgb(3, 3, 105));
    }
+
+.chamando-texto{
+   margin-right: 5%;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
